ci: Update image for guestbook-app to d56ceb9

--- a/apps/guestbook/deployment.yaml
+++ b/apps/guestbook/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: guestbook-container
-        image: reyredd/guestbook:placeholder
+        image: reyredd/guestbook:d56ceb9
         ports:
         - containerPort: 5000
         env:
