--- a/apps/guestbook/configmap.yaml
+++ b/apps/guestbook/configmap.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: guestbook-app
 data:
   # IMPORTANT: Update this line with your VM's connection details
-  DATABASE_URL: "postgresql://ubuntu:spectro@10.3.0.114:5432/guestbook_db
+  DATABASE_URL: "postgresql://ubuntu:spectro@10.3.0.114:5432/guestbook_db"
